Fix vertical alignment of icon in links-group

--- a/src/modules/links-group/_style.scss
+++ b/src/modules/links-group/_style.scss
@@ -113,7 +113,7 @@
   pointer-events: none;
   position: absolute;
   right: 12px;
-  top: 20px;
+  top: 17px;
 
   &:after {
     @extend %icon-font;
